# Wordle

./: Cargo.toml  HONOR-CODE.md  README.md  Report.md  config.json  state.json
data/: final.txt
src/: cli.rs  main.rs  player.rs  server.rs
wordle_test/: Cargo.toml
wordle_test/src/: main.rs
