[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25"
tui = "0.19"
atty = "0.2"
serde_json = "1.0.99"
console = "0.15"
colored = "2.0.0"
clap = { version = "4.3.9", features = ["derive"] }
rand = "0.8.5"
shuffle = "0.1.7"
serde = { version = "1.0.99", features = ["derive"] }
ordered-float = "3.7.0"
rayon = "1.5.1"
